chore(ci): Clean unused build env data
- Add Docker system cleanup cmd to release_arm64 workflow
- Delete EMQX-Business-Critical folder in build dir
- Ensure thorough Docker login state cleanup to avoid cache interference

--- a/.github/workflows/release_arm64.yml
+++ b/.github/workflows/release_arm64.yml
@@ -105,6 +105,8 @@ jobs:
         if: always()
         run: |
           docker logout ghcr.io
+          docker system prune -f > /dev/null
           # 清理可能存在的其他注册表登录信息
           rm -f ${HOME}/.docker/config.json
+          rm -rf ./EMQX-Business-Critical
 
